# cmake-project-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  build_boost.sh  build_hdr_histogram.sh  build_test.sh
cmake/: libboost.cmake  libhdrhist.cmake  libtestbm.cmake  link_benchmark.cmake  setup_environment.cmake
examples/: CMakeLists.txt
lib/: CMakeLists.txt  hello.bm.cpp  hello.cpp  hello.test.cpp  init.cpp
lib/include/lib/: hello.hpp  init.hpp
src/: CMakeLists.txt  main.cpp  main.test.cpp
